Wrapped services with InternalUnexpectedException and got rid of most of the UI.getCurrent() to bypass NullPointerExceptions